--- a/index.html
+++ b/index.html
@@ -1,329 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Tap Tap Tap</title>
-    <meta
-      name="description"
-      content="Open source tapping game built with Javascript"
-    />
-    <link href="style.css" rel="stylesheet" />
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <meta name="HandheldFriendly" content="true" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600"
-      rel="stylesheet"
-    />
-
-    <!-- favicon -->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="favicons/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      href="favicons/favicon-32x32.png"
-      sizes="32x32"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      href="favicons/favicon-16x16.png"
-      sizes="16x16"
-    />
-    <link rel="manifest" href="favicons/manifest.json" />
-    <link
-      rel="mask-icon"
-      href="favicons/safari-pinned-tab.svg"
-      color="#0b1d31"
-    />
-    <link rel="shortcut icon" href="favicons/favicon.ico" />
-    <meta name="msapplication-config" content="favicons/browserconfig.xml" />
-    <meta name="theme-color" content="#0b1d31" />
-
-    <!-- OG Details -->
-    <meta property="og:title" content="TapTapTap" />
-    <meta
-      property="og:description"
-      content="Open source tapping game built with Javascript"
-    />
-    <meta property="og:site_name" content="TapTapTap " />
-    <meta property="og:type" content="website" />
-  </head>
-  <body ontouchstart="">
-    <div class="admin-cp">
-      <button class="admin-cp-button" type="button" name="button">
-        Hide / Show Panel
-      </button>
-      <div class="admin-cp-items hidden">
-        <label class="vzbltyLabel" for="splashPageToggle">
-          <input
-            type="radio"
-            name="pT"
-            class="toggleCheckbox"
-            id="splashPageToggle"
-          />Splash Page
-        </label>
-        <label class="vzbltyLabel" for="gameMenuPageToggle">
-          <input
-            type="radio"
-            name="pT"
-            class="toggleCheckbox"
-            id="gameMenuPageToggle"
-            checked="checked"
-          />Game Menu Page
-        </label>
-        <label class="vzbltyLabel" for="highScorePageToggle">
-          <input
-            type="radio"
-            name="pT"
-            class="toggleCheckbox"
-            id="highScorePageToggle"
-          />High Score Page
-        </label>
-        <label class="vzbltyLabel" for="tutorialPageToggle">
-          <input
-            type="radio"
-            name="pT"
-            class="toggleCheckbox"
-            id="tutorialPageToggle"
-          />Tutorial Page
-        </label>
-        <label class="vzbltyLabel" for="playDelayPageToggle">
-          <input
-            type="radio"
-            name="pT"
-            class="toggleCheckbox"
-            id="playDelayPageToggle"
-          />PLay Delay Page
-        </label>
-
-        <label class="vzbltyLabel" for="playAreaPageToggle">
-          <input
-            type="radio"
-            name="pT"
-            class="toggleCheckbox"
-            id="playAreaPageToggle"
-          />PLay Area Page
-        </label>
-        <label class="vzbltyLabel" for="pauseMenuPageToggle">
-          <input
-            type="radio"
-            name="pT"
-            class="toggleCheckbox"
-            id="pauseMenuPageToggle"
-          />Pause Menu Page
-        </label>
-        <label class="vzbltyLabel" for="youLostPageToggle">
-          <input
-            type="radio"
-            name="pT"
-            class="toggleCheckbox"
-            id="youLostPageToggle"
-          />You Lost Page
-        </label>
-        <label class="vzbltyLabel" for="levelPassedPageToggle">
-          <input
-            type="radio"
-            name="pT"
-            class="toggleCheckbox"
-            id="levelPassedPageToggle"
-          />Level Passed Page
-        </label>
-      </div>
-    </div>
-
-    <div class="main-wrapper">
-      <!-- SPLASH/LOADING PAGE -->
-      <div id="pageSplash" class="page-cont page-splash page-faded-bg">
-        <div class="fixed-75w-wrapper">
-          <div
-            id="splashScreenLogo"
-            class="tpbl-circle c-white splash-screen-logo"
-          ></div>
-          <div id="splashScreenTxt">Loading AWESOME STUFF</div>
-        </div>
-      </div>
-
-      <!-- GAME MENU PAGE -->
-      <div id="pageGameMenu" class="page-cont page-game-menu page-faded-bg">
-        <div class="fixed-75w-wrapper">
-          <div class="gm-menu-header-cont">
-            <div class="tpbl-circle c-blue gm-menu-logo-bg"></div>
-            <h1 class="gm-menu-title">Tap Tap Tap</h1>
-            <h2 class="gm-menu-subtitle">Every Tap Matters</h2>
-          </div>
-          <button
-            id="newGameBtn"
-            class="gm-btn btn-blue"
-            type="button"
-            name="button"
-          >
-            New Game
-          </button>
-        </div>
-      </div>
-
-      <!-- NEW HIGH SCORE PAGE -->
-      <div
-        id="pageHighScore"
-        class="page-cont page-high-score page-faded-bg anmtd-grdnt-bg rd-grdnt-bg no-bg"
-      >
-        <div class="fixed-75w-wrapper">
-          <div class="info-screen-title-cont">
-            <div class="info-screen-icon you-lost-icon"></div>
-            <div class="info-screen-ttl-txt-bld">Game Over</div>
-            <div>You Lost</div>
-          </div>
-          <div class="info-screen-txt-cont">
-            <div class="info-screen-body-txt-reg">Score</div>
-            <div id="lvlLostNewHighScore" class="lvl-fnshd-score-nmb">86</div>
-            <div class="info-screen-body-txt-reg">New High Score</div>
-            <div class="lvl-fnshd-highscore-icon"></div>
-          </div>
-          <div class="sbmt-tryagain-txt">Try again?</div>
-          <div class="tpbl-circle c-white submit-circle"></div>
-        </div>
-      </div>
-
-      <!-- GAME TUTORIAL PAGE -->
-      <div id="pageTutorial" class="page-cont page-tutorial page-faded-bg">
-        <div class="fixed-100w-wrapper">
-          <div
-            id="tutPgStartGameBtn"
-            class="tpbl-circle c-blue tut-circle"
-          ></div>
-          <div class="tut-arrow"></div>
-          <h2 class="tut-text">TAP THE CIRCLE<br />TO START</h2>
-        </div>
-      </div>
-
-      <!-- PLAY DELAY PAGE -->
-      <div id="pagePlayDelay" class="page-cont page-play-delay page-faded-bg">
-        <div id="palyDelayCont" class="fixed-75w-wrapper">
-          <div class="" id="playDelayNum">3</div>
-        </div>
-      </div>
-
-      <!-- GAME PLAY AREA PAGE -->
-      <div id="pagePlayArea" class="page-cont page-play-area">
-        <div class="game-stats-cont">
-          <!-- time progress bar -->
-          <div id="gmStatsTimeProgress" class="gm-stats-time-progress"></div>
-
-          <div class="gm-stats-wrapper">
-            <!-- pause button -->
-            <div class="gm-stats-vcont">
-              <button
-                id="gmStatsPauseBtn"
-                class="gm-stats-pause-button"
-              ></button>
-            </div>
-            <!-- score -->
-            <div class="gm-stats-vcont">
-              <div class="stat-wrapper">
-                <div class="gm-stats-title">Score</div>
-                <div id="gmStatsScore" class="gm-stats-value">2894</div>
-              </div>
-            </div>
-            <!-- level number -->
-            <div class="gm-stats-vcont">
-              <div class="stat-wrapper text-align-right">
-                <div id="gmStatsLvlNumb" class="gm-stats-title">Level 7</div>
-                <div class="gm-stats-value">
-                  <span id="gmStatsCurrentTapCount" class="gm-stats-tap-count"
-                    >16</span
-                  >
-                  <span id="gmStatsTotalTapCount">/20</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="gameSpace" class="game-space">
-          <!-- Where the magic happens -->
-          <!-- <div class="tpbl-circle c-blue"></div> -->
-          <!-- <div class="tpbl-circle c-red"></div> -->
-        </div>
-      </div>
-
-      <!-- GAME PAUSE PAGE -->
-      <div
-        id="pagePauseMenu"
-        class="page-cont page-pause-menu page-faded-bg anmtd-grdnt-bg blu-grdnt-bg no-bg"
-      >
-        <div class="fixed-75w-wrapper">
-          <div class="info-screen-title-cont">
-            <div class="info-screen-icon puz-icon"></div>
-            <div class="info-screen-ttl-txt-bld">GAME PAUSED</div>
-          </div>
-          <div class="info-screen-txt-cont">
-            <div class="info-screen-body-txt-reg">Score</div>
-            <div id="lvlPausedScore" class="lvl-fnshd-score-nmb">521</div>
-          </div>
-          <div class="puz-menu-btnz-cont">
-            <button id="pmCntnuGmBtn" class="gm-btn btn-blue">Continue</button>
-            <button id="pmRstrtLvlBtn" class="gm-btn pm-rstrt-lvl-btn">
-              Restart
-            </button>
-          </div>
-        </div>
-      </div>
-
-      <!-- YOU LOST PAGE -->
-      <div
-        id="pageYouLost"
-        class="page-cont page-you-lost page-faded-bg anmtd-grdnt-bg rd-grdnt-bg no-bg"
-      >
-        <div class="fixed-75w-wrapper">
-          <div class="info-screen-title-cont">
-            <div id="lvlLostIcon" class="info-screen-icon you-lost-icon"></div>
-            <div class="info-screen-ttl-txt-bld">Game Over</div>
-            <div id="lvlLostTtl">You Lost</div>
-          </div>
-          <div class="info-screen-txt-cont">
-            <div class="info-screen-body-txt-reg">Score</div>
-            <div id="lvlLostScore" class="lvl-fnshd-score-nmb">746</div>
-          </div>
-          <div class="sbmt-tryagain-txt">Try again?</div>
-          <div
-            id="lvlLostTryAgainBtn"
-            class="tpbl-circle c-white submit-circle"
-          ></div>
-        </div>
-      </div>
-
-      <!-- LEVEL PASSED PAGE -->
-      <div
-        id="pageLevelPassed"
-        class="page-cont page-level-passed page-faded-bg anmtd-grdnt-bg grn-grdnt-bg no-bg"
-      >
-        <div class="fixed-75w-wrapper">
-          <div class="info-screen-title-cont">
-            <div class="info-screen-icon flag-icon"></div>
-            <div id="lvlPssdTtl">Level 2</div>
-            <div class="info-screen-ttl-txt-bld">Passed</div>
-          </div>
-          <div class="info-screen-txt-cont">
-            <div class="info-screen-body-txt-reg">Score</div>
-            <div id="lvlPssdScore" class="lvl-fnshd-score-nmb">521</div>
-            <div id="lvlPssdBonusScore" class="grow-animation"></div>
-          </div>
-          <div
-            id="lvlPssdContinueNextLvlBtn"
-            class="tpbl-circle c-white submit-circle"
-          ></div>
-        </div>
-      </div>
-    </div>
-
-    <!-- logic & brain -->
-    <script src="js/habibiScript.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><title>Tap Tap Tap</title><link href="style.css" rel="stylesheet" /><meta charset="UTF-8" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><meta name="HandheldFriendly" content="true" /><meta name="apple-mobile-web-app-capable" content="yes" /><link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet" /><link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#0b1d31" /><meta name="msapplication-config" content="favicons/browserconfig.xml" /><meta name="theme-color" content="#0b1d31" /><link rel="stylesheet" href="toast.css" /></head><body ontouchstart=""><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div class="admin-cp"><button class="admin-cp-button" type="button" name="button">Hide / Show Panel </button><div class="admin-cp-items hidden"><label class="vzbltyLabel" for="splashPageToggle"><input type="radio" name="pT" class="toggleCheckbox" id="splashPageToggle" />Splash Page </label><label class="vzbltyLabel" for="gameMenuPageToggle"><input type="radio" name="pT" class="toggleCheckbox" id="gameMenuPageToggle" checked="checked" />Game Menu Page </label><label class="vzbltyLabel" for="highScorePageToggle"><input type="radio" name="pT" class="toggleCheckbox" id="highScorePageToggle" />High Score Page </label><label class="vzbltyLabel" for="tutorialPageToggle"><input type="radio" name="pT" class="toggleCheckbox" id="tutorialPageToggle" />Tutorial Page </label><label class="vzbltyLabel" for="playDelayPageToggle"><input type="radio" name="pT" class="toggleCheckbox" id="playDelayPageToggle" />PLay Delay Page </label><label class="vzbltyLabel" for="playAreaPageToggle"><input type="radio" name="pT" class="toggleCheckbox" id="playAreaPageToggle" />PLay Area Page </label><label class="vzbltyLabel" for="pauseMenuPageToggle"><input type="radio" name="pT" class="toggleCheckbox" id="pauseMenuPageToggle" />Pause Menu Page </label><label class="vzbltyLabel" for="youLostPageToggle"><input type="radio" name="pT" class="toggleCheckbox" id="youLostPageToggle" />You Lost Page </label><label class="vzbltyLabel" for="levelPassedPageToggle"><input type="radio" name="pT" class="toggleCheckbox" id="levelPassedPageToggle" />Level Passed Page </label></div></div><div class="main-wrapper"><div id="pageSplash" class="page-cont page-splash page-faded-bg"><div class="fixed-75w-wrapper"><div id="splashScreenLogo" class="tpbl-circle c-white splash-screen-logo" ></div><div id="splashScreenTxt">Loading AWESOME STUFF</div></div></div><div id="pageGameMenu" class="page-cont page-game-menu page-faded-bg"><div class="fixed-75w-wrapper"><div class="gm-menu-header-cont"><div class="tpbl-circle c-blue gm-menu-logo-bg"></div><h1 class="gm-menu-title">Tap Tap Tap</h1><h2 class="gm-menu-subtitle">Every Tap Matters</h2></div><button id="newGameBtn" class="gm-btn btn-blue" type="button" name="button" >New Game </button></div></div><div id="pageHighScore" class="page-cont page-high-score page-faded-bg anmtd-grdnt-bg rd-grdnt-bg no-bg" ><div class="fixed-75w-wrapper"><div class="info-screen-title-cont"><div class="info-screen-icon you-lost-icon"></div><div class="info-screen-ttl-txt-bld">Game Over</div><div>You Lost</div></div><div class="info-screen-txt-cont"><div class="info-screen-body-txt-reg">Score</div><div id="lvlLostNewHighScore" class="lvl-fnshd-score-nmb">86</div><div class="info-screen-body-txt-reg">New High Score</div><div class="lvl-fnshd-highscore-icon"></div></div><div class="sbmt-tryagain-txt">Try again?</div><div class="tpbl-circle c-white submit-circle"></div></div></div><div id="pageTutorial" class="page-cont page-tutorial page-faded-bg"><div class="fixed-100w-wrapper"><div id="tutPgStartGameBtn" class="tpbl-circle c-blue tut-circle" ></div><div class="tut-arrow"></div><h2 class="tut-text">TAP THE CIRCLE<br />TO START</h2></div></div><div id="pagePlayDelay" class="page-cont page-play-delay page-faded-bg"><div id="palyDelayCont" class="fixed-75w-wrapper"><div class="" id="playDelayNum">3</div></div></div><div id="pagePlayArea" class="page-cont page-play-area"><div class="game-stats-cont"><div id="gmStatsTimeProgress" class="gm-stats-time-progress"></div><div class="gm-stats-wrapper"><div class="gm-stats-vcont"><button id="gmStatsPauseBtn" class="gm-stats-pause-button" ></button></div><div class="gm-stats-vcont"><div class="stat-wrapper"><div class="gm-stats-title">Score</div><div id="gmStatsScore" class="gm-stats-value">2894</div></div></div><div class="gm-stats-vcont"><div class="stat-wrapper text-align-right"><div id="gmStatsLvlNumb" class="gm-stats-title">Level 7</div><div class="gm-stats-value"><span id="gmStatsCurrentTapCount" class="gm-stats-tap-count" >16</span ><span id="gmStatsTotalTapCount">/20</span></div></div></div></div></div><div id="gameSpace" class="game-space"></div></div><div id="pagePauseMenu" class="page-cont page-pause-menu page-faded-bg anmtd-grdnt-bg blu-grdnt-bg no-bg" ><div class="fixed-75w-wrapper"><div class="info-screen-title-cont"><div class="info-screen-icon puz-icon"></div><div class="info-screen-ttl-txt-bld">GAME PAUSED</div></div><div class="info-screen-txt-cont"><div class="info-screen-body-txt-reg">Score</div><div id="lvlPausedScore" class="lvl-fnshd-score-nmb">521</div></div><div class="puz-menu-btnz-cont"><button id="pmCntnuGmBtn" class="gm-btn btn-blue">Continue</button><button id="pmRstrtLvlBtn" class="gm-btn pm-rstrt-lvl-btn">Restart </button></div></div></div><div id="pageYouLost" class="page-cont page-you-lost page-faded-bg anmtd-grdnt-bg rd-grdnt-bg no-bg" ><div class="fixed-75w-wrapper"><div class="info-screen-title-cont"><div id="lvlLostIcon" class="info-screen-icon you-lost-icon"></div><div class="info-screen-ttl-txt-bld">Game Over</div><div id="lvlLostTtl">You Lost</div></div><div class="info-screen-txt-cont"><div class="info-screen-body-txt-reg">Score</div><div id="lvlLostScore" class="lvl-fnshd-score-nmb">746</div></div><div class="sbmt-tryagain-txt">Try again?</div><div id="lvlLostTryAgainBtn" class="tpbl-circle c-white submit-circle" ></div></div></div><div id="pageLevelPassed" class="page-cont page-level-passed page-faded-bg anmtd-grdnt-bg grn-grdnt-bg no-bg" ><div class="fixed-75w-wrapper"><div class="info-screen-title-cont"><div class="info-screen-icon flag-icon"></div><div id="lvlPssdTtl">Level 2</div><div class="info-screen-ttl-txt-bld">Passed</div></div><div class="info-screen-txt-cont"><div class="info-screen-body-txt-reg">Score</div><div id="lvlPssdScore" class="lvl-fnshd-score-nmb">521</div><div id="lvlPssdBonusScore" class="grow-animation"></div></div><div id="lvlPssdContinueNextLvlBtn" class="tpbl-circle c-white submit-circle" ></div></div></div></div><script src="js/habibiScript.js"></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
