--- a/index.html
+++ b/index.html
@@ -1,63 +1,1 @@
-<html>
-  <!-- SEAN MADE THIS. https://plus.google.com/u/0/101749103627562194088/ -->
-  <head>
-    <title>The Hotel</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto+Slab"
-      rel="stylesheet"
-    />
-    <link href="index.css" rel="stylesheet" />
-    <link rel="icon" href="./splash.png" />
-    <meta
-      name="description"
-      content="A game in which you must escape out of a hotel via multiple choice questions."
-    />
-    <meta name="author" content="Sean" />
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="keywords" content="hotel" />
-  </head>
-  <body>
-    <h1 id="title" contenteditable>The Hotel</h1>
-    <table id="menu">
-      <tr>
-        <td>
-          <h1>Instructions</h1>
-          <p>I think you're able to find out yourself.</p>
-          <p>
-            And just in case you are one of the poor unintelligent ones, the
-            "Wake me up" button over there is the play button.
-          </p>
-          <p>
-            Obviously, there is a lot of dying involved, but don't worry! You'll
-            be one of them one day too.
-          </p>
-          <p>There are a total of 8 endings.</p>
-        </td>
-        <td>
-          <div id="play" class="btn">Wake me up</div>
-        </td>
-      </tr>
-    </table>
-    <div id="sceneType0">
-      <p class="message"></p>
-      <div class="btn">Continue</div>
-    </div>
-    <div id="sceneType1">
-      <p class="message"></p>
-      <table class="choices">
-        <tr></tr>
-      </table>
-    </div>
-    <div id="sceneType2">
-      <p class="message"></p>
-      <input type="number" placeholder="Enter number here" />
-      <div class="btn">Continue</div>
-    </div>
-    <div id="score"></div>
-
-    <script src="story.js" type="text/javascript"></script>
-    <script src="index.js" type="text/javascript"></script>
-  </body>
-</html>
+<html><head><title>The Hotel</title><link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet" /><link href="index.css" rel="stylesheet" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><meta http-equiv="Content-type" content="text/html; charset=utf-8" /><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><h1 id="title" contenteditable>The Hotel</h1><table id="menu"><tr><td><h1>Instructions</h1><p>I think you're able to find out yourself.</p><p>And just in case you are one of the poor unintelligent ones, the "Wake me up" button over there is the play button. </p><p>Obviously, there is a lot of dying involved, but don't worry! You'll be one of them one day too. </p><p>There are a total of 8 endings.</p></td><td><div id="play" class="btn">Wake me up</div></td></tr></table><div id="sceneType0"><p class="message"></p><div class="btn">Continue</div></div><div id="sceneType1"><p class="message"></p><table class="choices"><tr></tr></table></div><div id="sceneType2"><p class="message"></p><input type="number" placeholder="Enter number here" /><div class="btn">Continue</div></div><div id="score"></div><script src="story.js" type="text/javascript"></script><script src="index.js" type="text/javascript"></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
