--- a/index.html
+++ b/index.html
@@ -1,81 +1,1 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Townscaper</title>
-    <link rel="icon" href="TemplateData/favicon.ico" />
-    <link rel="stylesheet" href="TemplateData/style.css" />
-  </head>
-  <body>
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas"></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
-        </div>
-      </div>
-      <div id="unity-mobile-warning">
-        WebGL builds are not supported on mobile devices.
-      </div>
-    </div>
-    <script>
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebGL.loader.js";
-      var config = {
-        dataUrl: buildUrl + "/WebGL.data",
-        frameworkUrl: buildUrl + "/WebGL.framework.js",
-        codeUrl: buildUrl + "/WebGL.wasm",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "Arcade",
-        productName: "Townscaper",
-        productVersion: "0.23",
-      };
-
-      var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var mobileWarning = document.querySelector("#unity-mobile-warning");
-
-      // By default Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
-
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        container.className = "unity-mobile";
-        // Avoid draining fillrate performance on mobile devices,
-        // and default/override low DPI mode on mobile browsers. Hello3
-        config.devicePixelRatio = 1;
-        mobileWarning.style.display = "block";
-        setTimeout(() => {
-          mobileWarning.style.display = "none";
-        }, 5000);
-      } else {
-        //canvas.style.width = "100%";
-        //canvas.style.height = "100%";
-      }
-      canvas.style.background =
-        "url('" + buildUrl + "/WebGL.jpg') center / cover";
-      loadingBar.style.display = "block";
-
-      var script = document.createElement("script");
-      script.src = loaderUrl;
-      script.onload = () => {
-        createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
-        })
-          .then((unityInstance) => {
-            loadingBar.style.display = "none";
-          })
-          .catch((message) => {
-            alert(message);
-          });
-      };
-      document.body.appendChild(script);
-    </script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en-us"><head><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>Townscaper</title><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><link rel="stylesheet" href="TemplateData/style.css" /><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div id="unity-container" class="unity-desktop"><canvas id="unity-canvas"></canvas><div id="unity-loading-bar"><div id="unity-progress-bar-empty"><div id="unity-progress-bar-full"></div></div></div><div id="unity-mobile-warning">WebGL builds are not supported on mobile devices. </div></div><script>var buildUrl="Build"; var loaderUrl=buildUrl + "/WebGL.loader.js"; var config={ dataUrl: buildUrl + "/WebGL.data", frameworkUrl: buildUrl + "/WebGL.framework.js", codeUrl: buildUrl + "/WebGL.wasm", streamingAssetsUrl: "StreamingAssets", companyName: "Arcade", productName: "Townscaper", productVersion: "0.23",}; var container=document.querySelector("#unity-container"); var canvas=document.querySelector("#unity-canvas"); var loadingBar=document.querySelector("#unity-loading-bar"); var progressBarFull=document.querySelector("#unity-progress-bar-full"); var mobileWarning=document.querySelector("#unity-mobile-warning"); if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)){ container.className="unity-mobile"; config.devicePixelRatio=1; mobileWarning.style.display="block"; setTimeout(()=>{ mobileWarning.style.display="none";}, 5000);} else{} canvas.style.background="url('" + buildUrl + "/WebGL.jpg') center / cover"; loadingBar.style.display="block"; var script=document.createElement("script"); script.src=loaderUrl; script.onload=()=>{ createUnityInstance(canvas, config, (progress)=>{ progressBarFull.style.width=100 * progress + "%";}) .then((unityInstance)=>{ loadingBar.style.display="none";}) .catch((message)=>{ alert(message);});}; document.body.appendChild(script); </script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
