--- a/index.html
+++ b/index.html
@@ -1,42 +1,1 @@
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Tunnel Rush</title>
-    <link rel="stylesheet" href="style/style.css" />
-    <script src="UnityLoader.js"></script>
-    <script src="UnityProgress.js"></script>
-    <link rel="icon" href="img/tunnel.jpg" />
-    <script>
-      var gameInstance = UnityLoader.instantiate(
-        "gameContainer",
-        "build.json",
-        {
-          onProgress: UnityProgress,
-          Module: {
-            onRuntimeInitialized: function () {
-              UnityProgress(gameInstance, "complete");
-            },
-          },
-        }
-      );
-    </script>
-  </head>
-  <body>
-    <!-- BY ECHO!!! DO NOT REMOVE THIS COMMENT THE GAME WILL BREAK!!!
-
-
--->
-    <div class="webgl-content">
-      <div
-        id="gameContainer"
-        style="width: 100%; height: 95%; margin: auto"
-      ></div>
-      <div class="footer">
-        <div class="webgl-logo"></div>
-        <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">Tunnel Rush</div>
-      </div>
-    </div>
-  </body>
-</html>
+<html><head><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>Tunnel Rush</title><link rel="stylesheet" href="style/style.css" /><script src="UnityLoader.js"></script><script src="UnityProgress.js"></script><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><script>var gameInstance=UnityLoader.instantiate( "gameContainer", "build.json", { onProgress: UnityProgress, Module:{ onRuntimeInitialized: function (){ UnityProgress(gameInstance, "complete");},},} ); </script><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div class="webgl-content"><div id="gameContainer" style="width: 100%; height: 95%; margin: auto" ></div><div class="footer"><div class="webgl-logo"></div><div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div><div class="title">Tunnel Rush</div></div></div><script src="pwa.js"></script><script src="toast.js"></script></body></html>
