--- a/index.html
+++ b/index.html
@@ -1,66 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>UNDERRUN</title>
-    <style>
-      div:last-child {
-        color: #e90;
-      }
-      b {
-        animation: r 1s infinite;
-      }
-      @keyframes r {
-        50% {
-          opacity: 0;
-        }
-      }
-      #c {
-        width: 100%;
-        image-rendering: optimizeSpeed;
-        image-rendering: pixelated;
-        cursor: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAAHAQMAAAD+nMWQAAAABGdBTUEAALGPC/xhBQAAAAZQTFRFAAAA////pdmf3QAAAAF0Uk5TAEDm2GYAAAATSURBVAjXYxBgEGBgYDgGxEAWAAc4AQebSvKuAAAAAElFTkSuQmCC),
-          auto;
-      }
-      #a {
-        font-weight: bold;
-        color: #c80;
-        position: absolute;
-        top: 4vw;
-        left: 2vw;
-        font-size: 1.6vw;
-        overflow: hidden;
-        white-space: nowrap;
-        width: 94%;
-        text-shadow: 0 0 7px #f70;
-        transition: opacity 1s;
-      }
-    </style>
-  </head>
-  <body style="margin: 0; background: #000">
-    <canvas id="c" width="320" height="180"></canvas>
-    <code id="a"></code>
-    <script type="text/javascript" src="source/game.js"></script>
-    <script type="text/javascript" src="source/random.js"></script>
-    <script type="text/javascript" src="source/renderer.js"></script>
-    <script type="text/javascript" src="source/entity.js"></script>
-    <script type="text/javascript" src="source/entity-cpu.js"></script>
-    <script type="text/javascript" src="source/entity-player.js"></script>
-    <script type="text/javascript" src="source/entity-plasma.js"></script>
-    <script type="text/javascript" src="source/entity-spider.js"></script>
-    <script type="text/javascript" src="source/entity-sentry.js"></script>
-    <script type="text/javascript" src="source/entity-particle.js"></script>
-    <script type="text/javascript" src="source/entity-health.js"></script>
-
-    <script type="text/javascript" src="source/sonantx-reduced.js"></script>
-    <script
-      type="text/javascript"
-      src="source/music-dark-meat-beat.js"
-    ></script>
-    <script type="text/javascript" src="source/sound-effects.js"></script>
-    <script type="text/javascript" src="source/audio.js"></script>
-
-    <script type="text/javascript" src="source/terminal.js"></script>
-    <script type="text/javascript" src="source/main.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="UTF-8" /><title>UNDERRUN</title><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><style>div:last-child{ color: #e90;} b{ animation: r 1s infinite;} @keyframes r{ 50%{ opacity: 0;}} #c{ width: 100%; image-rendering: optimizeSpeed; image-rendering: pixelated; cursor: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAAHAQMAAAD+nMWQAAAABGdBTUEAALGPC/xhBQAAAAZQTFRFAAAA////pdmf3QAAAAF0Uk5TAEDm2GYAAAATSURBVAjXYxBgEGBgYDgGxEAWAAc4AQebSvKuAAAAAElFTkSuQmCC), auto;} #a{ font-weight: bold; color: #c80; position: absolute; top: 4vw; left: 2vw; font-size: 1.6vw; overflow: hidden; white-space: nowrap; width: 94%; text-shadow: 0 0 7px #f70; transition: opacity 1s;} </style><link rel="stylesheet" href="toast.css" /></head><body style="margin: 0; background: #000"><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><canvas id="c" width="320" height="180"></canvas><code id="a"></code><script type="text/javascript" src="source/game.js"></script><script type="text/javascript" src="source/random.js"></script><script type="text/javascript" src="source/renderer.js"></script><script type="text/javascript" src="source/entity.js"></script><script type="text/javascript" src="source/entity-cpu.js"></script><script type="text/javascript" src="source/entity-player.js"></script><script type="text/javascript" src="source/entity-plasma.js"></script><script type="text/javascript" src="source/entity-spider.js"></script><script type="text/javascript" src="source/entity-sentry.js"></script><script type="text/javascript" src="source/entity-particle.js"></script><script type="text/javascript" src="source/entity-health.js"></script><script type="text/javascript" src="source/sonantx-reduced.js"></script><script type="text/javascript" src="source/music-dark-meat-beat.js" ></script><script type="text/javascript" src="source/sound-effects.js"></script><script type="text/javascript" src="source/audio.js"></script><script type="text/javascript" src="source/terminal.js"></script><script type="text/javascript" src="source/main.js"></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
